kubernetes/django/component_django.yml
###########################
# Deployment
###########################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-postgre-deploy
  labels:
    app: django-postgre
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-postgre
  template:
    metadata:
      labels:
        app: django-postgre
    spec:
      containers:
      - name: django-postgre
        image: mehdiben27/django-postgres:v02
        imagePullPolicy: Always
        command: ["python","./manage.py", "runserver", "0.0.0.0:8010"]
        ports:
        - containerPort: 8010
---
###########################
# Cluster IP Service
###########################

apiVersion: v1
kind: Service
metadata:
  name: django-cluster-ip-service
spec:
  type: NodePort
  selector:
    app: django-postgre
  ports:
    - protocol: TCP
      port: 8010
      targetPort: 8010
