kubernetes/django/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sary-ns
  name: ingress-django-postgres
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: django-cluster-ip-service
              port: 
                 number: 8010
